set stash change - add title tag to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 
+<title>This is the index page</title>
 <nav>This is a new navbar</nav>
 
 <p>This is the first paragraph: This paragraph contains a lot of lines in the source code, but the browser ignores it.</p>
