Add <p> to shop.html in ParnianSrb

--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
+    <p>this is a P tag added to shop.html in ParnianSrb github profile<\p>
 </body>
 </html>
